# soft-engg-project-jan-2025-se-Jan-13

./: .gitignore  README.md  package-lock.json
backend/platform/: .env.example  README.md  alembic.ini  pyproject.toml  so_far.md  so_far.txt
backend/platform/ai_platform/: __main__.py  app_enums.py
backend/platform/ai_platform/agents/: framework_agentic.py  openai_agent.py  prompts.py  streaming_services.py  tools.py  tools_implemented.py
backend/platform/ai_platform/apis/: application.py  router.py
backend/platform/ai_platform/embedding_data/: test_data.txt
backend/platform/ai_platform/schemas/: admin.py  admin_students.py  ai_agent.py  auth.py  conversation.py  courses.py  student.py  weekwise_content.py  weekwise_operations.py
backend/platform/ai_platform/seed/: ba.py  dbms.py
backend/platform/ai_platform/supafast/: database.py  dummy_agents_seed.py  seed.py  week_content_insert_seed.py
backend/platform/ai_platform/vectordb/: db_pgvector.py  db_pinecone.py  ingest.py
backend/platform/migrations/: env.py
backend/platform/migrations/versions/: 010a33d8883e_courseid_added_to_deadlines_table.py  04224b208c2c_renamed_the_student_course_column.py  0eaf812883a2_added_assignment_number_columns.py  17cba591fac1_upload_date_as_datetime.py  1d9e7cb9be59_new_tables_for_weekcontent_added.py  22b69c09ae82_sync_database.py  279cf7752aa0_added_response_format_column_in_db.py  4106c6307c1d_added_created_modified_and_title_column_.py  4f9ebeb89dd5_added_agent_tables.py  5a7616efd886_created_student_table.py  5cc3478e13cd_added_title_column_to_week_table.py  (+14 more)
(+124 files in other folders)
