[project]
name = "ai-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "ujson (>=5.10.0,<6.0.0)",
    "openai (>=1.60.0,<2.0.0)",
    "langchain-text-splitters (>=0.3.5,<0.4.0)",
    "langchain-openai (>=0.3.1,<0.4.0)",
    "langchain-community (>=0.3.15,<0.4.0)",
    "langchain-pinecone (>=0.2.2,<0.3.0)",
    "langchain (>=0.3.15,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "langchain-postgres (>=0.0.13,<0.0.14)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
